[FIX] mail: composer is hard to interact with in mobile
iOS devices have persistent swipe bar at bottom which can overlap
UI that's too low on screen. This is notably a problem with
composer that is at the very bottom of screen and is only 40px in
height.

This commit fixes the issue by adding some padding at the bottom
of composer specifically on mobile devices.

Also fixes similar issue in mobile bottom navbar of Discuss app.

closes odoo/odoo#176557

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -74,5 +74,10 @@
 }
 
 .o-mail-Composer-compactContainer {
-    box-shadow: 0px -3px 25px 3px rgba(50, 50, 50, 0.1);
+    &.o-mobile:not(:focus-within) {
+        margin-bottom: map-get($spacers, 4) + map-get($spacers, 2);
+    }
+    &:not(.o-mobile) {
+        box-shadow: 0px -3px 25px 3px rgba(50, 50, 50, 0.1);
+    }
 }
